# FeiraAutomotivaInC

./: CMakeLists.txt  README.md  teste.c
doc/requirements/: requisitos.txt
include/: client.h  list.h  map.h  schedule.h  vehicle.h
src/: address.c  client.c  list.c  phone.c  schedule.c  teste.c
src/include/: list.h
src/model/: address.c  address.h  client.c  client.h  phone.c  phone.h  schedule.c  schedule.h  vehicle.h
